# video-study-notes-skill

./: .gitignore  README.md  SKILL.md  cookies.example.txt  pyproject.toml  requirements-skill.txt
assets/: note-template.md
scripts/: bootstrap_linux.sh  check_linux_env.py  extract_keyframes.py  prepare_audio.py
src/video_study_notes/: __init__.py  check_env.py  cli.py  extract_keyframes.py  install_skill.py  prepare_audio.py
subskills/media-transcribe/: SKILL.md
subskills/media-transcribe/scripts/: find_local_subtitles.py  transcribe_audio.py
subskills/yt-dlp/: SKILL.md
subskills/yt-dlp/scripts/: resolve_project_root.py  run_yt_dlp.py
